added and styled layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Send Mail via Js</title>
 </head>
 <body>
-    <h2>Javascript Mail Sender</h2>
+    <div class="container">
+        <form>
+            <h3>Get in touch</h3>
+            <input type="text" placeholder="name" id="name" required />
+            <input type="email" placeholder="Email here" id="email" required />
+            <input type="text" placeholder="Phone number here.." id="phone" required />
+            <textarea id="message" rows="4" placeholder="How can David MD help you please?...."></textarea>
+            <button type="submit" >Send</button>
+        </form>
+    </div> 
 
     <script src="main.js"></script>
 </body>
