--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input type="text" placeholder="Phone number here.." id="phone" required />
             <textarea id="message" rows="4" placeholder="How can David MD help you please?...."></textarea>
             <button type="submit">Send</button>
+            <p class="rightcopy">Developed by David OnlineMD &copy; 2023</p>
         </form>
     </div> 
 
